Move all properties and other constants into a single file.